Fri Mar 20 17:43:18 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: enabled email notification.

Fri Mar 20 17:39:52 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: removed Ruby 1.9.3 build on Travis CI

Fri Mar 20 12:38:36 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_info): obj_info() can receive internal objects.

	* gc.c (check_rvalue_consistency): obj_info() returns const char *.

Fri Mar 20 12:14:37 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_info): show class name and T_DATA type_name.

Thu Mar 19 22:12:46 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_copy_wb_protected_attribute): `dest' can be WB unprotected.

Thu Mar 19 21:25:25 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_copy_wb_protected_attribute): demote `dest' object.

Thu Mar 19 16:18:00 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h: export rb_gc_verify_internal_consistency().

Thu Mar 19 16:15:24 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_info): show allocation site if GC_DEBUG is not 0.

Thu Mar 19 16:12:01 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj_of): fix RGENGC_OLD_NEWOBJ_CHECK logics.
	  * skip on incremental marking because not sure what happen :p
	  * rb_gc_writebarrier_remember() is enough to mark children.

Thu Mar 19 16:08:42 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_copy_wb_protected_attribute): need demote for old objects.

Thu Mar 19 10:31:00 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (fill_random_bytes): release the handle in the static
	  variable, not a local variable.

Thu Mar 19 06:30:35 2015  Koichi Sasada  <ko1@atdot.net>

	* object.c (rb_obj_clone): do not touch age (FL_PROMOTED[01]) because
	  rb_obj_alloc() can return old object in debug.

Thu Mar 19 06:29:28 2015  Koichi Sasada  <ko1@atdot.net>

	* test/objspace/test_objspace.rb: flag name was changed
	  (long_lived -> uncollectible).

Thu Mar 19 05:30:13 2015  Koichi Sasada  <ko1@atdot.net>
